assets/stylesheets/sass/text-edit.sass
@use "variables" as vars
@use "mixins" as mix

$header-color: rgb(56, 58, 55)
$style-bar-color: rgb(32, 34, 31)
$body-color: rgb(30, 30, 30)
$separator-color: rgba(255, 255, 255, 0.25)
$width: 48.35rem
$inch-width: 7.27rem
$inch-height: 1rem
$styles-height: 2.25rem
$min-width: 41rem

.text-edit
  overflow-x: hidden
  flex-direction: column
  align-content: stretch
  @include mix.window($style-bar-color, $width, vars.$height, $min-width)

  .bold
    font-weight: bold

  .italic
    font-style: italic

  .underline
    text-decoration: underline

  .left
    text-align: left

  .center
    text-align: center

  .right
    text-align: right

  .justify
    text-align: justify

  &-header
    @include mix.header($header-color, 3rem)

    &__title
      @include mix.header-title(1.5rem, 0.24rem)

    &__empty
      @include mix.header-spacing()
  
  .styles, .rule
    @include mix.disable-select()

  .styles
    background: $header-color
    width: 100%
    overflow: hidden

    .drops
      padding: vars.$padding
      display: flex
      justify-content: space-between

      input[type='color']
        width: calc($styles-height * 0.9)
        height: calc($styles-height * 0.9)
        margin-top: calc($styles-height / 20) // margin-top + margin-bottom + $height = $styles-height
        background: none
        border: none
        outline: none

        &::-webkit-color-swatch-wrapper
          padding: 0

        &::-webkit-color-swatch
          border: vars.$border-thickness solid $separator-color

      select, .drop--element, input[type='color'], input[type='color']::-webkit-color-swatch-wrapper, input[type='color']::-webkit-color-swatch
        border-radius: vars.$border-radius

      select, select:hover
        background-color: $header-color
        background-image: url("../../images/icons/angles-up-down.svg")
        background-repeat: no-repeat
        background-position: right 0.4rem top 50%
        background-size: 0.8rem 0.8rem
        color: vars.$font-color
        appearance: none

      i
        width: 2.25rem
        height: 1.1rem
        font-size: 1.1rem
        border-right: vars.$border-thickness solid $separator-color
        text-align: center

        &:last-child
          border-right: 0

        &:hover
          color: white

      select, .drop--element
        height: $styles-height

        &:hover
          background-color: rgba(255, 255, 255, 0.1)
          transition: background 1s

      .drop--styles
        border: unset
        position: relative
        overflow: hidden
        padding: 0.4rem 1.5rem 0.4rem 0.4rem
        font-size: 1rem
        line-height: 1rem
        border: vars.$border-thickness solid $separator-color

      .drop--decorations, .drop--alignments
        position: relative
        display: flex
        padding-top: calc(($styles-height - 1.1rem) / 2) // padding-top + padding-bottom + font-awesome-height-size = $styles-height

  // RULER
  .rule
    position: relative
    height: 1.5rem
    width: 100vw
    float: left
    background: $style-bar-color
    font-family: sans-serif
    font-size: 1.4rem
    line-height: 1.15
    border-top: 0.1rem solid vars.$font-color
    border-bottom: 0.01rem solid vars.$font-color
    margin-top: 1rem
    padding-left: vars.$padding

    // TOP OF INITIAL TRIANGLE
    &:before
      content: "\00a0|"
      font-size: 0.9rem
      position: absolute
      top: -0.9rem
      left: 0.15rem
      height: 0.17rem
      width: 0.71rem
      background: vars.$font-color

    // EACH HALF-INCH BLOCK
    .half-inch
      width: calc($inch-width / 2)
      height: calc(($inch-height * 3) / 5)
      float: right

    // EACH INCH BLOCK
    .inch
      float: left
      height: $inch-height
      width: $inch-width

      // NUMBER UNDER EACH INCH
      .num
        color: white
        line-height: 2.15
        padding-left: calc($inch-width / 40)
        font-family: vars.$font-family

    // EACH INCH AND HALF-INCH BLOCK
    .inch, .half-inch
      display: block
      position: relative
      font-size: 0.8rem
      border-left: 0.1rem solid vars.$font-color

      // ALL TRIANGLES EXCEPT FIRST AND LAST
      &:before
        content: ""
        display: block
        position: absolute
        width: 0
        height: 0
        border-top: 0.4rem solid transparent
        border-left: 0.5rem solid vars.$font-color
        border-bottom: 0.4rem solid transparent
        top: -0.82rem
        left: -0.05rem

      // ALL MINI INCHES (i.e. 0.1 -- 0.4, 0.6 -- 0.9)
      &:after
        content: "\00a0\00a0\00a0\00a0\00a0\00a0|\00a0\00a0\00a0\00a0\00a0\00a0|\00a0\00a0\00a0\00a0\00a0\00a0|\00a0\00a0\00a0\00a0\00a0\00a0|"
        font-size: calc($inch-width / 17)
        width: 100%
        position: absolute
        top: -0.06rem
        left: -0.2rem

    // [BOTTOM OF FIRST AND] LAST TRIANGLE
    .inch:first-child:before, .inch:last-child .half-inch:before
      border-left: 0.4rem solid transparent
      border-top: 0.5rem solid vars.$font-color
      border-right: 0.4rem solid transparent
      top: -0.58rem
      left: -0.41rem

  .text-body
    font-size: 1.2rem
    color: white
    padding: 0 vars.$padding
    overflow: auto
    background: $body-color
    flex: 1

    a
      text-shadow: 0, 0, 1rem, vars.$foreground-color

    table
      width: 100%
      overflow-x: auto
      border: vars.$border-thickness solid white
      border-collapse: collapse
      background-color: black
      margin: 0 auto
      max-width: -webkit-fit-content
      max-width: -moz-fit-content
      max-width: fit-content
    
      tbody
        td, tr
          border: vars.$border-thickness solid white
          text-align: center

        tr
          &:nth-child(odd)
            background-color: rgba(255, 255, 255, 0.1)
          
          &:nth-child(even)
            background-color: rgba(255, 255, 255, 0.2)

        td
          padding: vars.$padding

